objects/X2nd_Recipient_Sample__c.object
<CustomObject>
    <description>Used to capture sample data that is sent to 2nd Recipient SFDC Contacts</description>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Report_Date__c</fullName>
        <label>Final Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G360_Sample__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G360 Sample #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardant_360_Sample__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>There cannot be a 2nd Recipient record without a 360 Sample record.</inlineHelpText>
        <label>Guardant360 Sample #</label>
        <referenceTo>Guardant_360_Sample__c</referenceTo>
        <relationshipLabel>2nd Recipient Samples</relationshipLabel>
        <relationshipName>X2nd_Recipient_Samples_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_Fax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent Fax</label>
        <referenceTo>efaxapp__Sent_Fax__c</referenceTo>
        <relationshipLabel>2nd Recipient Samples</relationshipLabel>
        <relationshipName>X2nd_Recipient_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2nd_Recipient_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2nd Recipient Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>2nd Recipient Samples</relationshipLabel>
        <relationshipName>X2nd_Recipient_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2nd_Recipient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2nd Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>2nd Recipient Samples</relationshipLabel>
        <relationshipName>X2nd_Recipient_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2nd_Recipient_Fax__c</fullName>
        <inlineHelpText>Insert from LIMS via Jitterbit integration.</inlineHelpText>
        <label>2nd Recipient Fax #</label>
        <type>Phone</type>
    </fields>
    <label>2nd Recipient Sample</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>X2nd_Recipient_Account__c</columns>
        <columns>X2nd_Recipient_Contact__c</columns>
        <columns>X2nd_Recipient_Fax__c</columns>
        <columns>Guardant_360_Sample__c</columns>
        <columns>Date_Received__c</columns>
        <columns>G360_Sample__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>2nd Recipient Sample Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>2nd Recipient Samples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>